Commit №3 Creating all Dialog Fragment items. Creating Activity of Aoutorization and Registratoin

--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -7,15 +7,31 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <include
+        layout="@layout/app_bar_fridge"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
 
-    <fragment
-        android:id="@+id/container"
+    </include>
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/main_container">
 
-    </fragment>
-
-
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:src="@android:drawable/ic_input_add"
+            app:backgroundTint="@color/colorAccent" />
+    </FrameLayout>
+</LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -24,5 +40,6 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_fridge"
         app:menu="@menu/activity_fridge_drawer" />
+
 
 </android.support.v4.widget.DrawerLayout>
