--- a/app/src/main/res/layout/fridge_item.xml
+++ b/app/src/main/res/layout/fridge_item.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:ignore="UseCompoundDrawables">
 
     <TextView
@@ -14,18 +15,17 @@
         android:layout_height="wrap_content"
         android:gravity="center|top"
         android:paddingTop="10dp"
-        android:text="Колбаса"
-        android:textSize="24sp"
-
+        android:text="Макароны\nс сыром"
+        android:textSize="12sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/product_img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:src="@drawable/ic_menu_camera"
         tools:srcCompat="@tools:sample/avatars[2]" />
-
 
 </LinearLayout>
