Commit №3 Deleting and Creating function of Fridge Fragment. Create the Image Adaptor

--- a/app/src/main/res/layout/data_product_dialog.xml
+++ b/app/src/main/res/layout/data_product_dialog.xml
@@ -33,11 +33,11 @@
                 android:padding="5dp"/>
 
             <TextView
+                android:id="@+id/text_measurement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="кг"
                 android:background="@drawable/rect"
                 android:padding="5dp"/>
 
