--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <ImageView
         android:id="@+id/image_choose_item"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_margin="10dp"
         android:layout_gravity="center"/>
 
 </LinearLayout>
