--- a/app/src/main/res/layout/create_product_dialog.xml
+++ b/app/src/main/res/layout/create_product_dialog.xml
@@ -12,6 +12,8 @@
         android:background="@color/background"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:hint="Введите наименование продукта"/>
 
     <LinearLayout
@@ -26,6 +28,8 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_weight="1"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:text="Выбирите нужный тип измерения"/>
 
         <Spinner
@@ -50,6 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="16sp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:text="Выбирите тип продукта"/>
 
         <Spinner
@@ -74,6 +80,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="16sp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:text="Выбирите картинку для продукта"/>
 
         <ImageView
