--- a/app/src/main/res/layout/data_product_dialog.xml
+++ b/app/src/main/res/layout/data_product_dialog.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:gravity="center">
     <ImageView
+        android:id="@+id/data_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="10dp"
